add button "My Portal" in cms Home ( /cms/index.html )
fix PCS all button "Yes" at right 

add User Agreement and Privacy Policy URL in sign up(signin.html)

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4742 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/en.json
+++ b/lang/en.json
@@ -118,7 +118,7 @@
             "Repeat Password":                                                                                                                  "Repeat Password",
             "This email has been used.":                                                                                                        "This email has been used.",
             "Two passwords don't match, please retype.":                                                                                        "Two passwords don't match, please retype.",
-            "I have read and accepted the User Agreement and Privacy Policy":                                                                   "I have read and accepted the User Agreement and Privacy Policy",
+            "I have read and accepted the User Agreement and Privacy Policy":                                                                   "I have read and accepted the <a target='_blank' href='/en/terms.html'>User Agreement</a> and <a target='_blank' href='/en/policy.html'>Privacy Policy</a>",
             "User Name":                                                                                                                        "User Name",
             "Create a unique user name in 9x9 which composed of 6-16 English letters ,numbers or low line.":                                    "Create a unique user name in 9x9 which composed of 6-16 English letters ,numbers or low line.",
             "Only letters, numbers or low line are allowed.":                                                                                   "Only letters, numbers or low line are allowed.",
