bug fix 1. portal-set.html a. fill set name when channel is empty b. use lang to get sets list
2. input text add has-change event 

3. portalManage fix add channel err message 

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4751 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/en.json
+++ b/lang/en.json
@@ -249,6 +249,7 @@
             "Results:": "Results:",
             "Add channels into your “<span>Set 2</span>”": "Add channels into your “<span>{0}</span>”",
             "Please fill in the channel url to search.": "Please fill in the channel url to search.",
+            "Please fill in the correct url.": "Please fill in the correct url.",
             "Please fill in the keywords to search.": "Please fill in the keywords to search.",
             "Processing...": "Processing..."
         },
