1. singin.html finish forgot / reset password
2. channel-setting.html finish sharing url Target MSO

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4794 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/lang/en.json
+++ b/lang/en.json
@@ -23,6 +23,7 @@
             "Processing...":                                                                                                                    "Processing..."
         },
         "system-error": {
+            "Password reset success!": "Password reset success!",
             "Unknown error.":                                                                                                                   "Unknown error.",
             "You are not authorized to PCS.":                                                                                                   "You are not authorized to PCS.",
             "You are not authorized to edit this channel.":                                                                                     "You are not authorized to edit this channel.",
@@ -403,6 +404,7 @@
             "Click on <span>Favorite</span> button when watching channels to collect more episodes":                                            "Click on <span>Favorite</span> button when watching channels to collect more episodes",
             "Edit":                                                                                                                             "Edit",
             "Delete":                                                                                                                           "Delete",
+            "Get URL": "Get URL",
             "Draft":                                                                                                                            "Draft",
             "Curate new episode to tell a story":                                                                                               "Curate new episode to tell a story",
             "<strong>Curate online videos</strong> into each single episode.":                                                                  "<strong>Curate online videos</strong> into each single episode.",
